[[release-notes-head]]
== APM Server version HEAD

// These have to be under a == headline unfortunately:
// Use these for links to issue and pulls. Note issues and pulls redirect one to
// each other on Github, so don't worry too much on using the right prefix.
:issue: https://github.com/elastic/apm-server/issues/
:pull: https://github.com/elastic/apm-server/pull/

https://github.com/elastic/apm-server/compare/6.4\...master[View commits]

[float]
=== Added

- Provide basic server information at `/` {pull}1197[1197]
- Add pipeline registration and pipeline usage {pull}1258[1258],{pull}1296[1296]
- Allow sending `tags` for `spans`, that get indexed in ES {pull}1156[1156].
- Add pipeline registration and pipeline usage {pull}1258[1258]
- Update JSON schema spec for v2 {pull}1303[1303]
- Make JSON schema spec distributed tracing compliant {pull}1303[1303]
- Add required `transaction.span_count.started` to Intake v2 {pull}1351[1351]
- Rename `transaction.span_count.dropped.total` to `transaction.span_count.dropped` on Intake API v2 {pull}1351[1351]

[[release-notes-6.4]]
== APM Server version 6.4

https://github.com/elastic/apm-server/compare/6.3\...6.4[View commits]

* <<release-notes-6.4.0>>

[[release-notes-6.4.0]]
=== APM Server version 6.4.0

https://github.com/elastic/apm-server/compare/v6.3.2\...v6.4.0[View commits]

- Change `frontend` to `rum` in config file, but still support `frontend` for backwards compatibility {pull}1155[1155].
- Support `rum` and `client-side` endpoint for RUM for backwards compatibility {pull}1155[1155].
- Listen on default port 8200 if unspecified {pull}886[886].
- Update Go to 1.10.3 {pull}1054[1054].
- Combine `apm-server.yml` and `apm-server.reference.yml` into one file {pull}958[958].
- Add optional tracing for the server's API and event publisher {pull}816[816].
- Read sourcemap content and fill context lines {pull}972[972].
- Remove regexProperties validation rules {pull}1148[1148], {pull}1150[1150].